# TEXTSUMMARIZE

./: .dockerignore  .env  .env.example  Dockerfile  Jenkinsfile  PRODUCTION_GRADE_GUIDE.md  README.md  app.py  config.py  health_check.py  main.py  pyproject.toml  requirements.txt  streamlit.py  summarize.ipynb
.github/workflows/: ci.yml
.github/workflows/k8s/: deployment.yaml
.github/workflows/k8s/k8s/: service.yaml
tests/: test_main.py
