[project]
name = "textsummarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub[hf-xet]>=0.34.4",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "pytest>=8.4.2",
    "rouge-score>=0.1.2",
    "streamlit>=1.49.1",
    "sumy>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
